apps/tachtit/nextcloud/httproute-local.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-local
  namespace: nextcloud
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nextcloud.local.seyzahl.com
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - nextcloud.local.seyzahl.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 8080
